--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 authors = ["Ramon Huidobro <ramon.martin.huidobro@gmail.com>"]
 
 [dependencies]
+rocket = "0.3.3"
+rocket_codegen = "0.3.3"
